--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <title>The Peoples Blocks</title>
+	<script type="text/javascript" src="http://underscorejs.org/underscore-min.js"></script>
   <script type='text/javascript' src='http://cdnjs.cloudflare.com/ajax/libs/kineticjs/4.3.1/kinetic.min.js'></script>
   <style type='text/css'>
     #world{border:1px solid #333;width:480px;height:480px}#pieces{margin-top:5px}#pieces li{float:left}
