--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
 	<script type="text/javascript" src="http://underscorejs.org/underscore-min.js"></script>
   <script type='text/javascript' src='http://cdnjs.cloudflare.com/ajax/libs/kineticjs/4.3.1/kinetic.min.js'></script>
   <style type='text/css'>
-    #world{border:1px solid #333;width:480px;height:480px}#pieces{margin-top:5px}#pieces li{float:left}
+    #world{border:1px solid #333;width:580px;height:480px}#pieces{margin-top:5px}#pieces li{float:left}
   </style>
 </head>
 <body>
   <div id="world"></div>  
 </body>
 <script src="js/index.js"></script>
+
+  <script type="text/javascript">require("the-peoples-blocks")</script>
 </html>
